# wavecord

./: CONTRIBUTING.md  LICENSE  README.md  README.rst  __init__.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
examples/: basic_play.py  full_bot.py  queue_demo.py  volume_control.py
tests/: test_exceptions.py  test_node.py  test_player.py  test_queue.py  test_track.py
wavecord/: __init__.py  client.py  events.py  exceptions.py  node.py  player.py  pyrightconfig.json  queue.py  track.py  voice.py
