[project]
name = "wavecord"
version = "0.1.0"
description = "A modern, typed Lavalink wrapper for Pycord bots."
authors = [
  { name = "Error44", email = "dev@wavecord.dev" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/error44s/wavecord"
Documentation = "https://wavecord.dev"
Repository = "https://github.com/error44s/wavecord"
Issues = "https://github.com/error44s/wavecord/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "ruff>=0.4.0",
  "pyright>=1.1.350"
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [".venv", "build", "dist"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.13"
exclude = [".venv"]
